<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drive-by Reminder</string>

    <!-- Menu and header strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add new task</string>
    <string name="menu_modify">Modify task</string>
    <string name="menu_set_location">Change location</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_discard">Discard</string>
    
    <!-- Service -->
    <string name="service_notification_title">Tasks nearby have been found</string>
    
    <!-- Network alert -->
    <string name="network_alert_title">No network location</string>
    <string name="network_alert_text">Please enable your mobile network connectivity as this will be used to get your location!</string>
    <string name="network_alert_ok">OK</string>
    
    <!-- Home fragment -->
    <string name="fragment_home_intro">Welcome to Drive-by Reminder\n\nUse this brand new android app to remind yourself about e.g. tasks when you visit certain locations.\n\nSwipe to the right or use the upper menu to get directly to the task list.</string>
    
    <!-- All tasks fragment -->
    <string name="fragment_alltasks_emptylist">Create a new task using the add symbol located in the upper-right corner.</string>
    
    <string name="fragment_alltasks_task_nodate">No date given</string>
    <string name="fragment_alltasks_task_snoozed">(Snoozed)</string>
    
    <!-- Nearby tasks fragment -->
    <string name="fragment_nearbytasks_emptylist">There are no nearby tasks at the moment.</string>
    
    <!-- Add task activity -->
    <string name="activity_addtask_form_what">What</string>
    <string name="activity_addtask_form_what_hint">What&#8230;</string>
   
    <string name="activity_addtask_form_location_where">Location trigger</string>
    <string name="activity_addtask_form_location_button">Choose location</string>
    <string name="activity_addtask_form_location_button_multiple_prefix">(Multiple)</string>
    
    <string name="activity_addtask_form_done_header">Task status</string>
    <string name="activity_addtask_form_done_explain">Task is done</string>
    
    <string name="activity_addtask_form_alert_nodate">Alert on date</string>
    <string name="activity_addtask_form_alert_startdate">Alert from date</string>
    <string name="activity_addtask_form_alert_enddate">Alert to date</string>
    
    <string name="activity_addtask_form_description">Description</string>
    <string name="activity_addtask_form_description_hint">Description&#8230;</string>
    
    <string name="activity_addtask_form_proximitry">Proximity trigger</string>
    <string name="activity_addtask_form_proximitry_spinner">Set custom proximity</string>
    
    <string name="activity_addtask_save_validation_notitle">You have to enter a title for your new task</string>
    <string name="activity_addtask_save_validation_nolocations">You have to select at least one task location</string>
    
    <!-- Edit location activity -->
    <string name="activity_editlocation_searchfor">Search for location</string>
    <string name="activity_editlocation_searchfor_hint">Street address, ZIP code</string>
    <string name="activity_editlocation_searchfor_button">Start search</string>

    <string name="activity_editlocation_locationlist">Found locations</string>
    
    <string name="activity_editlocation_result_nosearch">Please enter a location name and tap the search button.\nTry to be as specific as possible about the location address.</string>
    <string name="activity_editlocation_result_noresults">No results have been found.</string>
    <string name="activity_editlocation_result_nonetwork">Network error. Do you have a working internet connection?</string>
    <string name="activity_editlocation_result_unknownerror">An unknown error occurred. Please try again later.</string>

    <string name="activity_editlocation_location_downloaderror">An error occurred while retrieving locations. Is your internet connection working?</string>
    
    <string name="activity_editlocation_save_nolocations">You have to select at least one location to continue</string>
    
    <!-- Modify task activity -->
    <string name="activity_modifytask_task_deletesuccessful">The task has been deleted successfully</string>
    
    <!-- Delete task dialog -->
    <string name="dialog_delete_task_question">Do you really want to delete this task?</string>
    <string name="dialog_delete_task_question_multiple">Do you really want to delete these tasks?</string>

    <string name="dialog_delete_task_positive">Delete</string>
    <string name="dialog_delete_task_negative">Cancel</string>
    
    <!-- Preferences -->
    <string name="settings_title_general">General</string>
    
    <string name="settings_title_appenabled">Enable app</string>
 	<string name="settings_summaryon_appenabled">Alert when hitting task locations</string>
	<string name="settings_summaryoff_appenabled">App does not report location matches</string>

	<string name="settings_title_defaultproximitry">Default proximity</string>
	<string name="settings_summary_defaultproximitry">Default notification proximity</string>
	
	<string name="settings_summary_snoozetime">Time before showing tasks again whose notifications have been cleared</string>
	<string name="settings_title_snoozetime">Notification snooze time</string>
    
    <string name="settings_title_eventcreationedit">Task creation and edit</string>

    <string name="settings_title_confirmdelete">Confirm deletion</string>
    <string name="settings_summaryon_confirmdelete">Ask before deleting tasks</string>
    <string name="settings_summaryoff_confirmdelete">Do not ask before deleting tasks</string>

    <string name="settings_title_locationbias">Region bias</string>
    <string name="settings_summary_locationbias">Prefer locations from selected region</string>

    <string name="settings_title_notification">Notification settings</string>
    
    <string name="settings_title_ringtone">Ringtone</string>
    
    <string name="settings_title_vibrate">Vibrate mobile phone</string>

    <string name="settings_title_about">About</string>
    <string name="settings_title_createdby">Created by Wolfgang Gaar</string>

</resources>