<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory 
        android:title="@string/settings_title_general"
        android:key="settings_general">
        
        <CheckBoxPreference
	    	android:key="appEnabled"
	    	android:summaryOn="@string/settings_summaryon_appenabled"
	    	android:summaryOff="@string/settings_summaryoff_appenabled"
	    	android:title="@string/settings_title_appenabled"
	    	android:defaultValue="true" />

        <ListPreference
            android:key="defaultProximitry"
            android:summary="@string/settings_summary_defaultproximitry"
            android:title="@string/settings_title_defaultproximitry"
            android:entries="@array/proximitryEntriesHuman"
            android:entryValues="@array/proximitryEntries"
            android:defaultValue="3000" />
        
        <ListPreference
            android:key="snoozeTime"
            android:summary="@string/settings_summary_snoozetime"
            android:title="@string/settings_title_snoozetime"
            android:entries="@array/snoozeTimeEntriesHuman"
            android:entryValues="@array/snoozeTimeEntries"
            android:defaultValue="20" />

    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/settings_title_eventcreationedit"
        android:key="settings_event">

        <CheckBoxPreference
	    	android:key="confirmDelete"
	    	android:summaryOn="@string/settings_summaryon_confirmdelete"
	    	android:summaryOff="@string/settings_summaryoff_confirmdelete"
	    	android:title="@string/settings_title_confirmdelete"
	    	android:defaultValue="true" />
        
        <ListPreference
            android:key="locationBias"
            android:summary="@string/settings_summary_locationbias"
            android:title="@string/settings_title_locationbias"
            android:entries="@array/locationBiasEntriesHuman"
            android:entryValues="@array/locationBiasEntries"
            android:defaultValue="at" />

    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/settings_title_notification"
        android:key="settings_notification">

        <RingtonePreference
            android:key="notificationRingtone"
            android:title="@string/settings_title_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true" />
        
        <CheckBoxPreference
	    	android:key="notificationVibrate"
	    	android:title="@string/settings_title_vibrate"
	    	android:defaultValue="true" />

    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/settings_title_about"
        android:key="settings_about">
	    <Preference
	        android:title="@string/settings_title_createdby" >
		</Preference>
	</PreferenceCategory>

</PreferenceScreen>